# MRFE-Market-Fingerprint-Engine

./: .gitignore  MRFE_GAP_ANALYSIS.md  MRFE_OPENROUTER_CHECKLIST.md  generate_sb3.py  mrfe.db  sample_project.sb3  start_mrfe.bat
mrfe-backend/: .coverage  .env  .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  TODO.md  alembic.ini  docker-compose.yml  index.html  launch_server.py  mrfe.db  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_server.py  setup.py  start_backend.bat  start_beat.bat  start_frontend.bat  start_server.bat  start_worker.bat  test_mrfe.db
mrfe-backend/.github/workflows/: ci.yml  deploy.yml
mrfe-backend/.hypothesis/constants/: 00840c5bf2688a1c  00b9c0bb25c7e46d  044ff88d4b8f81ab  0486246a8c036f60  05abd343565ce346  06cb428ff577b7ae  08f736e3f77be2c8  0954acd9d9a957a8  09965e52c64a3b7e  0abba0197505bea3  0b526d85ad95e6fa  107d446b8dee303e  11382e28bf095784  123673a9f232bc51  12aa8e9b0f39d64a  13e4f423bdcde2d7  14d77e90e85ffe2f  16043c356d7ebd7e  17694546a82d93e0  18c0cabe9521a442  18e2975c52842bee  1cb4b18aa4a40f18  1f4f13a1b9a29e8e  2125cf21875349f8  240e5f27d0fc865e  241fd367d15a4b7a  267343d44bef8012  277ac97cc600be79  283e0996822ad52f  2b6758b889f77d0b  2d78d4b97b2538a2  2e6e3b1c7780c71a  2e8cd1f414eda2e6  323d7114a12e7e3a  333cac4e5201d389  33e0b68c10e080b1  (+142 more)
mrfe-backend/data/: newsapi.json
mrfe-backend/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml
mrfe-backend/docs/: api_usage.md  architecture.md  configuration.md  deployment.md  faq.md  troubleshooting.md  user_guide.md
mrfe-backend/frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
mrfe-backend/kubernetes/: configmap.yaml  deployment-blue.yaml  deployment-frontend.yaml  deployment-green.yaml  deployment-worker.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  pvc-postgres.yaml  secret.yaml  service-frontend.yaml  service.yaml
mrfe-backend/public/: app.js  styles.css
mrfe-backend/src/: main.py
mrfe-backend/storage/: fingerprint_vectors.json
mrfe-backend/tests/: conftest.py
(+222 files in other folders)
