[tool.poetry]
name = "mrfe_backend"
version = "2.0.0"
description = "Enterprise-grade Market Reaction Fingerprint Engine backend"
authors = ["MRFE Team <team@mrfe.example.com>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
httpx = "^0.28.1"
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.28.2"
opentelemetry-sdk = "^1.28.2"
opentelemetry-instrumentation-fastapi = "^0.49b2"
redis = "^5.2.0"
celery = "^5.4.0"
python-multipart = "^0.0.17"
cryptography = "^43.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
motor = "^3.6.0"
orjson = "^3.10.11"
numpy = "^1.26.4"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
torch = "^2.2.2"
transformers = "^4.48.2"
accelerate = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
hypothesis = "^6.118.0"
black = "^24.10.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
types-redis = "^4.6.0.20241004"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # FastAPI Depends/default injection pattern
    "UP007", # Allow Optional[...] in interface definitions
    "UP037", # Keep quoted annotations where helpful in protocols
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
strict = true
show_error_codes = true
plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
